Removed obselete classes that where added during SQL copier first try

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -32,27 +32,17 @@ set (SOURCES_FILES
           mdtSqlDatabaseBasicInfoWidget.cpp
           mdtSqlDatabaseSqlite.cpp
           mdtSqlDatabaseDialogSqlite.cpp
+          
           mdtSqlFieldSelectionDialog.cpp
           mdtSqlTransaction.cpp
           mdtSqlForeignKeySetting.cpp
-          
-          mdtAbstractSqlCopierCodec.cpp
-          mdtSqlCopierCodecSqlite.cpp
-          mdtSqlCopierCodec.cpp
-          
-          mdtSqlCopierCodecSettingsWidget.cpp
           
           mdtSqlSchemaTable.cpp
           mdtSqlTableSchemaModel.cpp
           mdtSqlTableSetupWidget.cpp
           mdtSqlFieldSetupWidget.cpp
           mdtSqlFieldSetupDialog.cpp
-          
-          mdtSqlCopierFieldMappingDialog.cpp
-          
-          mdtSqlCopierTableMappingWidget.cpp
-          mdtSqlCopierTableMappingWidgetItem.cpp
-          
+          # Database copier classes
           mdtSqlDatabaseCopierTableMapping.cpp
           mdtSqlDatabaseCopierTableMappingModel.cpp
           mdtSqlDatabaseCopierTableMappingDialog.cpp
