Working on database schema model

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -40,6 +40,7 @@ set (SOURCES_FILES
           # Database schema
           mdtSqlDatabaseSchema.cpp
           mdtSqlDatabaseSchemaModel.cpp
+          mdtSqlDatabaseSchemaDialog.cpp
           mdtSqlSchemaTable.cpp
           mdtSqlTableSchemaModel.cpp
           mdtSqlTableSetupWidget.cpp
