Working on database schema (indexes)

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -46,6 +46,9 @@ set (SOURCES_FILES
           mdtSqlViewSchema.cpp
           mdtSqlTableSchemaModel.cpp
           mdtSqlTableSetupWidget.cpp
+          mdtSqlIndex.cpp
+          mdtSqlPrimaryKey.cpp
+          mdtSqlForeignKey.cpp
           mdtSqlField.cpp
           mdtSqlFieldSetupWidget.cpp
           mdtSqlFieldSetupDialog.cpp
