Working on database module (SQL table schema)
Now, mdtSqlSchemaTable is able again to revsrese partially from a SQLite database.

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -50,6 +50,7 @@ set (SOURCES_FILES
           mdtSqlPrimaryKey.cpp
           mdtSqlForeignKey.cpp
           mdtSqlField.cpp
+          mdtSqlFieldType.cpp
           mdtSqlFieldSetupWidget.cpp
           mdtSqlFieldSetupDialog.cpp
           # Database copier classes
