Added basic support for SQL trigger in database schema

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -44,6 +44,7 @@ set (SOURCES_FILES
           mdtSqlDatabaseSchemaThread.cpp
           mdtSqlSchemaTable.cpp
           mdtSqlViewSchema.cpp
+          mdtSqlTriggerSchema.cpp
           mdtSqlTableSchemaModel.cpp
           mdtSqlTableSetupWidget.cpp
           mdtSqlIndex.cpp
