Working on SQL copier

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -61,6 +61,7 @@ set (SOURCES_FILES
           mdtSqlDatabaseCopierMapping.cpp
           mdtSqlDatabaseCopierMappingModel.cpp
           mdtSqlDatabaseCopierDialog.cpp
+          mdtSqlDatabaseCopierThread.cpp
     )
 
 # Platform specific files
