Working on new CSV parser

--- a/src/mdtutils/CMakeLists.txt
+++ b/src/mdtutils/CMakeLists.txt
@@ -29,7 +29,7 @@ set (SOURCES_FILES
           mdtErrorOut.cpp
           # File
           mdtCsvFile.cpp
-          mdtCsvParser.cpp
+          mdtCsvStringParser.cpp
           # UIC number
           mdtUicNumber.cpp
           mdtUicNumberItem.cpp
