Created CSV file generator setup dialog

--- a/src/mdtcsv/CMakeLists.txt
+++ b/src/mdtcsv/CMakeLists.txt
@@ -11,6 +11,8 @@ set (SOURCES_FILES
           mdtCsvStringGenerator.cpp
           mdtCsvFileGenerator.cpp
           mdtCsvRecordFormat.cpp
+          mdtCsvGeneratorSettingsWidget.cpp
+          mdtCsvFileGeneratorSettingsDialog.cpp
     )
 
 # Output library
