Working on CSV export

--- a/src/mdtcsv/CMakeLists.txt
+++ b/src/mdtcsv/CMakeLists.txt
@@ -12,7 +12,9 @@ set (SOURCES_FILES
           mdtCsvFileGenerator.cpp
           mdtCsvRecordFormat.cpp
           mdtCsvGeneratorSettingsWidget.cpp
+          mdtCsvFileGeneratorFileSettingsWidget.cpp
           mdtCsvFileGeneratorSettingsDialog.cpp
+          mdtCsvTableViewDataMapper.cpp
     )
 
 # Output library
