Working on SQL copier (splitted table mapping to obtain common base classes, that will be reused for CSV import)

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -57,6 +57,9 @@ set (SOURCES_FILES
           mdtSqlFieldType.cpp
           mdtSqlFieldSetupWidget.cpp
           mdtSqlFieldSetupDialog.cpp
+          # Copier common classes
+          mdtSqlCopierTableMapping.cpp
+          mdtSqlCopierTableMappingModel.cpp
           # Database copier classes
           mdtSqlDatabaseCopierTableMapping.cpp
           mdtSqlDatabaseCopierTableMappingModel.cpp
