Working on SQL copier table mapping

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -73,6 +73,7 @@ set (SOURCES_FILES
           mdtSqlCsvStringImportTableMapping.cpp
           mdtSqlCsvStringImportTableMappingModel.cpp
           mdtSqlCsvFileImportTableMapping.cpp
+          mdtSqlCsvFileImportTableMappingModel.cpp
     )
 
 # Platform specific files
