Removed deprecated stuff in SQL copier table mapping

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -58,7 +58,7 @@ set (SOURCES_FILES
           mdtSqlFieldSetupWidget.cpp
           mdtSqlFieldSetupDialog.cpp
           # Copier common classes
-          mdt/sql/copier/SourceField.cpp
+#           mdt/sql/copier/SourceField.cpp
           
           mdt/sql/copier/TableMapping.cpp
           mdt/sql/copier/TableMappingItem.cpp
