Working on SQL copier table mapping

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -63,6 +63,7 @@ set (SOURCES_FILES
           mdtSqlCopierTableMappingModel.cpp
           mdtSqlCopierDataMapping.cpp
           mdt/sql/copier/UniqueInsertExpressionModel.cpp
+          mdt/sql/copier/UniqueInsertExpressionDialog.cpp
           # Database copier classes
           mdtSqlDatabaseCopierTableMapping.cpp
           mdtSqlDatabaseCopierTableMappingModel.cpp
