--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -62,6 +62,7 @@ set (SOURCES_FILES
           mdt/sql/copier/TableMappingItem.cpp
           mdt/sql/copier/TableMappingModel.cpp
           mdtSqlCopierDataMapping.cpp
+          mdt/sql/copier/ExpressionKeyFieldSelectionDialog.cpp
           mdt/sql/copier/UniqueInsertExpressionModel.cpp
           mdt/sql/copier/UniqueInsertExpressionDialog.cpp
           # Database copier classes
