Working on SQL field selection dialog

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -36,7 +36,7 @@ set (SOURCES_FILES
           # Field selection
           mdt/sql/FieldSelectionProxyModel.cpp
           mdt/sql/FieldSelectionDialog.cpp
-          mdtSqlFieldSelectionDialog.cpp
+#           mdtSqlFieldSelectionDialog.cpp
 
           mdtSqlTransaction.cpp
           mdtSqlForeignKeySetting.cpp
