Cleanup in SQL copier

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -67,7 +67,7 @@ set (SOURCES_FILES
           mdt/sql/copier/MappingModel.cpp
           mdt/sql/copier/CopyThread.cpp
           
-          mdtSqlCopierDataMapping.cpp
+#           mdtSqlCopierDataMapping.cpp
 
           mdt/sql/copier/ExpressionKeyFieldSelectionDialog.cpp
           mdt/sql/copier/ExpressionMatchItemModel.cpp
